<resources>
    <string name="app_name">The family app</string>
    <string name="gruppe">Gruppe</string>
    <string name="hovedside">Hovedside</string>
    <string name="profile">Profile</string>
    <string name="legg_til_aktivitet2">Legg til aktivitet</string>
    <string name="action_settings">Settings</string>
    <string name="group_info">GroupInfo</string>
    <string name="kastUtMedlem">Kast ut medlem</string>
    <string name="send">Send</string>
    <string name="err_msg_email">Emailen er ikke gyldig</string>
    <string name="err_msg_navn">Navnet er ikke gyldig</string>
    <string name="endreProfile">Endre profile</string>
    <string name="leggTilMedlemMedID">Legg til medlem med ID:</string>
    <string name="exampleID">#4458675</string>
    <string name="none"> </string>
    <string name="Login">Login</string>
    <string name="loginEmail">Email</string>
    <string name="loginEmailOverskrift">Email</string>
    <string name="title_activity_group_info1">GroupInfoActivity1</string>
    <string name="calendar">Calendar</string>
    <string name="family_bubble">FamilyBubble</string>
    <string name="oenskelist">Ønskelist</string>
    <string name="gruppeinfo">Gruppeinfo</string>
    <string name="familyname">FamilyName</string>
    <string name="familieid">FamilyId</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="velg_startdag">Velg startdag</string>
    <string name="lag_meal_plan">Lag meal_plan</string>
    <string name="velg_antall_dager">Velg antall dager</string>
    <string name="avbryt">Avbryt</string>
    <string name="lag">Lag</string>
    <string name="lagre">Lagre</string>
    <string name="input">Legg til vare</string>
    <string name="bildeinfo">Profilebilde</string>
    <string name="skriv">Hva vil du handle?</string>
    <string name="skriv2">Skriv inn</string>
    <string name="id">Bruker-ID</string>
    <string name="legg_til_en_birthday">Legg til en birthday</string>
    <string name="ola_nordmann">Ola Nordmann</string>
    <string name="logg_ut">Logg ut</string>
    <string name="rediger">Edit</string>
    <string name="add_button_text">Legg Til</string>
    <string name="item_editText_hint">Skriv en ny gjenstand</string>
    <string name="navn">Skriv inn navn til shopping_list</string>
    <string name="shopping_list">Lag en shopping_list</string>
    <string name="shopping_listHovedside">ShoppingList</string>
    <string name="fornavn_etternavn">Fornavn Etternavn</string>
    <string name="endreProfileNavn">Navn</string>
    <string name="endreProfileEmail">Email</string>
    <string name="email">Email</string>
    <string name="passord">Passord</string>
    <string name="passord2">Gjenta passord</string>
    <string name="opprettBrukerNavn">Navn</string>
    <string name="opprettBrukerEmail">Ola@nordmann.no</string>
    <string name="opprettPassord">Create passord</string>
    <string name="gjentaPassord">Gjenta Passord</string>
    <string name="opprettBruker">Create bruker</string>
    <string name="PhoneNumberHint">+47 12365478</string>
    <string name="dd_mm_yyyy">DD.MM.YYYY</string>
    <string name="fullt_navn">Fullt navn</string>
    <string name="mobilnummer">Mobilnummer: </string>
    <string name="foedselsdato">Fødselsdato: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logg_inn">Logg inn</string>
    <string name="example_email_com">example@email.com</string>
    <string name="opprett_bruker">Create bruker</string>
    <string name="logo">Logo</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="profileBilde">Profilebilde</string>
    <string name="textView">TextView</string>
    <string name="registrer_bruker">Registrer bruker</string>
    <string name="rediger_profile">Edit profile</string>
    <string name="shopping_listOverskrift">ShoppingList</string>
    <string name="shopping_list_nr">ShoppingList nr:</string>
    <string name="ny_vare">Ny vare</string>
    <string name="delete">Delete</string>
    <string name="tilbake">Tilbake</string>
    <string name="ny_birthday">Ny birthday</string>
    <string name="birthdayer">Birthdayer</string>
    <string name="ny_samtale">Ny samtale</string>
    <string name="start_en_samtale_med">Start en samtale med:</string>
    <string name="opprett_samtale">Create samtale</string>
    <string name="ShoppingList">ShoppingList</string>
    <string name="ny_shopping_list">test</string>
    <string name="har_du_ikke_bruker">Har du ikke bruker?</string>
    <string name="registrer_deg">Registrer deg</string>
    <string name="nothing_to_show_here">Nothing to show here</string>
    <string name="meal_plan">MealPlan</string>
    <string name="nskelistr">Ønskelistr</string>
    <string name="bruker_id">Bruker-ID: </string>
    <string name="opprett_en_meal_plan">Create en meal_plan!</string>
    <string name="exampleYear">x år</string>
    <string name="deleteBtn">deleteBtn</string>
    <string name="familieidDrawer">FamilyID</string>
    <string name="textview">TextView</string>
    <string name="message">Message</string>
    <string name="addBirthday">Legg til en birthday!</string>
    <string name="joinFamilyBtn">Bli medlem av eksisterende familie</string>
    <string name="createNewFamilyBtn">Create ny familie</string>
    <string name="familyId">Familyid</string>
    <string name="fillFamilyId">Skriv inn FamilyId</string>
    <string name="fillPassword">Skriv inn passord</string>
    <string name="bliMedlem">Bli Medlem</string>
    <string name="familyName">Familynavn</string>
    <string name="createPassword">Create passord</string>
    <string name="repeatPassword">Gjenta passord</string>
    <string name="start_en_samtale">Start en samtale!</string>
    <string name="chatName">Conversation navn</string>
    <string name="giveChatName">Gi navn til samtalen:</string>
    <string name="endre_familienavn">Endre familienavn</string>
    <string name="familienavn">Family navn</string>
    <string name="endre_familienavnTextView">Endre familienavn:</string>
    <string name="medlemmer">Medlemmer</string>
    <string name="opprett_en_shopping_list">Create en shopping_list!</string>
    <string name="opprett_shopping_list">Create shopping_list</string>
    <string name="tittel">Tittel</string>
    <string name="item_navn">Item navn</string>
    <string name="legg_til">Legg til</string>
    <string name="dato_fra">Dato fra</string>
    <string name="tid_fra">Tid fra</string>
    <string name="tid_til">Tid til</string>
    <string name="dato_til">Dato til</string>
    <string name="aktivitet">Aktivitet</string>
    <string name="endre_aktivitet">Endre aktivitet</string>
    <string name="endre_aktivitet2">Endre aktivitet:</string>
    <string name="opprett">Create</string>
    <string name="antallDagerMealPlan">Velg antall dager (1–7)</string>
    <string name="startdagMealPlan">Velg startdag</string>
    <string name="slett">Slett</string>
    <string name="createWishlist">Create en ønskelist</string>
    <string name="create_wishlist">Create ønskelist</string>
    <string name="nameWishlist">Ønskelist navn</string>
    <string name="giveWishlistName">Gi navn til ønskelist:</string>
    <string name="Awish">Ønske</string>
    <string name="saveChanges">Lagre endringer</string>
    <string name="changeTheme">Endre fargetema</string>
    <string name="registerSignup">Registrer deg</string>
    <string name="shopping_list_tittel">ShoppingList tittel</string>
    <string name="legg_til_aktivitet">Legg til aktivitet:</string>
    <string name="mobilnummerLogin">Mobilnummer</string>
    <string name="birthdays">Birthdayer</string>
    <string name="profileNav">Profile</string>
    <string name="groupInfo">GroupInfo</string>
    <string name="SettingsNav">Settings</string>
    <string name="fyller_x_r">Fyller x år</string>
    <string name="splitValue">\\.</string>
    <string name="mat">Mat</string>
    <string name="datoer">datoer</string>
    <string name="endreBilde">Endre profilebilde</string>
    <string name="leggTilMealPlan">Legg til meal_plan</string>
    <string name="untitled">untitled</string>
    <string name="endre_fargetema">Endre fargetema</string>
    <string name="day_night">Day/Night</string>
    <string name="Darkmode">Dark mode</string>
    <string name="Bluemode">Blue mode</string>
    <string name="Purplemode">Purple mode</string>
    <string-array name="Ukedager">
        <item>Mandag</item>
        <item>Tirsdag</item>
        <item>Onsdag</item>
        <item>Torsdag</item>
        <item>Fredag</item>
        <item>Lørdag</item>
        <item>Søndag</item>
    </string-array>
    <integer-array name="AntallDager">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </integer-array>
</resources>
