<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/calendarFragment"
            android:icon="@drawable/ic_action_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/birthdayFragment"
            android:icon="@drawable/ic_action_birthday"
            android:title="@string/birthdays" />
        <item
            android:id="@+id/meal_planFragment"
            android:icon="@drawable/ic_action_food"
            android:title="@string/meal_plan" />
        <item
            android:id="@+id/shopping_listFragment"
            android:icon="@drawable/ic_action_shopping"
            android:title="@string/ShoppingList" />
        <item
            android:id="@+id/wishlistFragment"
            android:icon="@drawable/ic_action_list"
            android:title="@string/oenskelist" />
        <item
            android:id="@+id/family_bubbleFragment"
            android:icon="@drawable/ic_action_chat"
            android:title="@string/family_bubble" />
    </group>

    <item
        android:title="" >
        <menu>
            <item
                android:id="@+id/profileFragment"
                android:icon="@drawable/ic_action_profile"
                android:title="@string/profileNav" />
            <item
                android:id="@+id/group_infoFragment"
                android:icon="@drawable/ic_action_group"
                android:title="@string/groupInfo" />
            <item
                android:id="@+id/settingsFragment"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/SettingsNav" />
        </menu>
    </item>
</menu>