<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_action_calendar"
        android:title="@string/calendar" />
    <item
        android:id="@+id/meal_planFragment"
        android:icon="@drawable/ic_action_food"
        android:title="@string/meal_plan" />
    <item
        android:id="@+id/shopping_listFragment"
        android:icon="@drawable/ic_action_shopping"
        android:title="@string/ShoppingList" />
    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/ic_action_list"
        android:title="@string/oenskelist" />
    <item
        android:id="@+id/family_bubbleFragment"
        android:icon="@drawable/ic_action_chat"
        android:title="@string/family_bubble" />
</menu>